Added a submit form and basic info on the Rasengan

--- a/tribute-page.html
+++ b/tribute-page.html
@@ -16,17 +16,27 @@
       </div>
       <article id = "tribute-info">
         <h1>Ninjutsu</h1>
-        <p></p>
-        <p></p>
+         <ul>
+           <li>Rasengan: The Rasengan was created by Minato Namikaze himself, which was based off of the Tailed Beast Bomb. Minato Spent three years developing the the Rasengan, which he intended to be the highest shape form of shape transformation, a sphere. The Rasengan requires no hand signs and does not take any more chakra to sustain it once it is formed, meaning there is no limit to how long one can stay formed, unless it collides with something, in which it dissapates. A basic Rasengan is just a sphere of chakra, but it can be added on to. Some variations of the rasengan are the Rasenshuriken, created by the 7th Hokage and Minato's son, Naruto Uzumaki, as well as the Vanishing Rasengan, created by Minato's grandson, Boruto Uzumaki.  </li>
+           <li>PlaceHolderText</li>
+         </ul>
+         <h3>What's your favorite jutsu of Minato's?</h3>
+         <form action = "file:///Users/michaelkhanna/tribute-page/tribute-page.html?">
+           <input type = "radio" id = "Rasengan" name = "fav_jutsu" value = "Rasengan">
+           <label for = "Rasengan">Rasengan</label><br>
+
+
+           <input type = "submit" value = "Submit" formaction="file:///Users/michaelkhanna/tribute-page/tribute-page.html?">
+         </form>
         <h1>Early Life</h1>
-        <p></p>
-        <p></p>
+         <p></p>
+         <p></p>
         <h1>Reign as Hokage</h1>
-        <p></p>
-        <p></p>
+         <p></p>
+         <p></p>
         <h1>Death</h1>
-        <p></p>
-        <p></p>
+         <p></p>
+         <p></p>
       </article>
 
       <a href = "" target = "_blank"></a>
