MAde picture larger when cursor is above

--- a/tribute-page.html
+++ b/tribute-page.html
@@ -10,8 +10,8 @@
 
       <div id = "img-div">
         <figure>
-          <img src = "download.jpg" alt = "Minato Namikaze" id = "image">
-          <figcaption id = "img-caption">Minato Namikaze"</figcaption>
+          <img src = "download.jpg" alt = "Minato Namikaze" id = "image" class = "image">
+          <figcaption id = "img-caption">Minato Namikaze</figcaption>
         </figure>
       </div>
       <article id = "tribute-info">
@@ -21,8 +21,8 @@
            <li>Space-Time Ninjutsu: Minato's other signature ability was the Flying Thunder God Technique, which he gained greater mastery and versatility than its creator, the Second Hokage. His exploits with this technique gained him the moniker "Konoha's Yellow Flash". Using the technique, he could instantly move to the location of anything marked with his special seal, whether a tool, place, or person that was branded. Minato could bring others with him, though he needed to provide the chakra for their transport. He did not need to accompany targets he teleported, giving him a defensive option to teleport incoming projectiles away. Learn more about the FTG technique <a href = "https://naruto.fandom.com/wiki/Flying_Thunder_God_Technique" target = "_blank">here</a>.</li><br>
            <li>Fūinjutsu: Minato learned several fūinjutsu from Jiraiya and Kushina. The most notable of these was the Eight Trigrams Sealing Style he used to seal the Nine-Tails' Yang-half into Naruto, which would allow small amounts of the Nine-Tails' chakra to naturally mix with Naruto's own. Knowing the seal would slowly weaken over time, Minato created a key that could accelerate or reverse this process. As an extra precaution, he mixed Kushina's and his own chakra into the seal so that, when certain conditions were met, they could help Naruto with his control of the Nine-Tails' power, as well as allow them to see their son after they were dead. Minato could also perform the Dead Demon Consuming Seal, which he had enough familiarity with to know it couldn't be used to seal all of the Nine-Tails' chakra. With the Contract Seal, he could remove an opponent's control over any creatures they summoned. He also knew how to immediately transfer a tailed beast from one jinchūriki to another. You can learn more about the Eight Trigrams Sealing Style <a href = "https://naruto.fandom.com/wiki/Eight_Trigrams_Sealing_Style" target = "_blank">here</a>.</li><br>
          </ul>
-         <h3>What's your favorite jutsu of Minato's?</h3>
-         <form action = "file:///Users/michaelkhanna/tribute-page/tribute-page.html?">
+         <h3 id = "question" >What's your favorite jutsu of Minato's?</h3>
+         <form action = "file:///Users/michaelkhanna/tribute-page/tribute-page.html?" id = "form">
            <input type = "radio" id = "Rasengan" name = "fav_jutsu" value = "Rasengan">
            <label for = "Rasengan">Rasengan</label><br>
            <input type = "radio" id = "Flying_Thunder_God_Technique" name = "fav_jutsu" value = "Flying_Thunder_God_Technique">
