Finalized web page. Picture now resizes responisively without exceeding original length

--- a/tribute-page.html
+++ b/tribute-page.html
@@ -8,8 +8,8 @@
   <body>
     <main>
 
-      <div id = "img-div">
-        <figure>
+      <div id = "img-div" class = "image">
+        <figure class = "image">
           <img src = "download.jpg" alt = "Minato Namikaze" id = "image" class = "image">
           <figcaption id = "img-caption">Minato Namikaze</figcaption>
         </figure>
